--- a/translations/kangyur/translations/094-018_toh741,1006-the_twelve_names_of_the_goddess_sri.xml
+++ b/translations/kangyur/translations/094-018_toh741,1006-the_twelve_names_of_the_goddess_sri.xml
@@ -28,7 +28,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-094-018-48">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -49,7 +49,7 @@
                 <idno xml:id="UT22084-094-018"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-11-01</date>
+                <date>2024-11-21</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh741" type="text">
@@ -140,6 +140,12 @@
                 <change who="#line-tofte" when="2024-11-06T11:23:17.993Z" type="text-version" status="0.0.2" xml:id="UT22084-094-018-139">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-11-21T12:46:10.69Z" type="translation-status" status="1.a" xml:id="UT22084-094-018-140">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:46:10.69Z" type="text-version" status="1.0.0" xml:id="UT22084-094-018-141">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -178,8 +184,8 @@
                         essence, it is a dhāraṇī centered on twelve epithets of the goddess of
                         wealth and a short ritual instruction concerning its recitation. Lists of
                         the epithets of a deity are a common type of dhāraṇī, and such texts can
-                        sometimes be extremely long, for example Reciting the Names of
-                            Mañjuśrī.<note place="end" xml:id="UT22084-094-018-55">
+                        sometimes be extremely long (for example, <title xml:lang="en">Reciting the Names of
+                            Mañjuśrī</title>).<note place="end" xml:id="UT22084-094-018-55">
                                 <title xml:lang="Sa-Ltn">Mañjuśrī­nāma­saṃgīti</title> (<title xml:lang="Bo-Ltn">’jam dpal mtshan brjod</title>, Toh 360).<ref rend="pending" target="http://read.84000.co/translation/toh360.html"/>
                         </note> An alternative version of this text is <title xml:lang="en">The Sūtra of Mahāśrī</title>,<note place="end" xml:id="UT22084-094-018-56">
                             <title xml:lang="Sa-Ltn">Mahāśrīsūtra</title> (<title xml:lang="Bo-Ltn">dpal chen mo’i mdo</title>, Toh 740/1005). See <title xml:lang="en">
@@ -195,29 +201,27 @@
                         is promised to provide prosperity. This text styles her a bodhisattva.</p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-58"/>
                     <p tid="11">The text is extant in Sanskrit in the old palm-leaf Nepalese
-                        Compendium of Dhāraṇīs. Two such witnesses have been published by
+                        Compendium of Dhāraṇīs (<title xml:lang="Sa-Ltn">Dhāraṇī­saṃgraha</title>). Two such witnesses have been published by
                             Hidas.<note place="end" xml:id="UT22084-094-018-59"> Hidas 2021, p. 33,
                             item no. 3 and p. 52, item no. 40 in Cambridge University Library Ms
-                            Add. 1680.8.3 and Ms Add. 1680.8 respectively. </note> The first is
+                            Add. 1680.8.3 and Ms Add. 1680.8, respectively. </note> The first is
                         unfortunately fragmentary, and we cannot determine what the end of the text
                         looked like. The second witness concludes the text with the application of
                         the dhāraṇī, which is not mirrored in the Tibetan but is paralleled by the
-                        penultimate section of The Sūtra of Mahāśrī. Another difference is that in
+                        penultimate section of <title xml:lang="en">The Sūtra of Mahāśrī</title>. Another difference is that in
                         the Sanskrit, the name-dhāraṇī is revealed not only to Avalokiteśvara, but
                         also to Mañjuśrī.</p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-60"/>
                     <p tid="12">The Tibetan translation dates from the imperial period, sometime in
-                        the early ninth century. It is listed in both imperial catalogs,<note place="end" xml:id="UT22084-094-018-61"> Denkarma no. 433
-                            (Herrmann-Pfandt 2008, pp. 247–48); Phangthangma no. 430 (Kawagoe 2005,
-                            p. 23). Interestingly, the former gives the length as 8 units, whereas
+                        the early ninth century. It is listed in both imperial catalogs,<note place="end" xml:id="UT22084-094-018-61">Denkarma, folio 303.b; Herrmann-Pfandt 2008, pp. 247–48; Kawagoe 2005, p. 23. Interestingly, the former gives the length as 8 units, whereas
                             the latter gives 10. </note> and the colophon attributes it to the
                         famous translator-duo Jinamitra and Yeshé Dé. We know of at least one
-                        Dunhuang copy of the Tibetan translation <note place="end" xml:id="UT22084-094-018-62">
+                        Dunhuang copy of the Tibetan translation;<note place="end" xml:id="UT22084-094-018-62">
                             <ref target="https://gallica.bnf.fr/ark:/12148/btv1b8303994x">Pelliot
                                 tibétain 68.1</ref>
                             <title xml:lang="en">, </title>Bibliothèque
                             nationale de France, Département des Manuscrits, accessed through <title xml:lang="en">Bibliothèque nationale de France Gallica</title>.
-                            Already identified in Lalou 1939, p. 23.</note>;
+                            Already identified in Lalou 1939, p. 23.</note>
                             this was copied on the back of a Chinese scroll in a somewhat unusual
                             way, in columns.</p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-63"/>
@@ -236,8 +240,8 @@
                         bodhisattva to whom the name-dhāraṇī is revealed is Samantabhadra, and this
                         version also transmits some passages on the application of the spell, as
                         well as another dhāraṇī, which is quite similar to the famous dhāraṇī of the
-                        Heart Sūtra, <foreign xml:lang="Sa-Ltn" type="quote">gate gate</foreign>,
-                        etc.</p>
+                        Heart Sūtra, (<foreign xml:lang="Sa-Ltn" type="quote">gate gate</foreign>,
+                        etc.)</p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-65"/>
                     <p tid="14">This translation was made principally on the basis of the Tibetan
                         translations of the text found in the Tantra Collection (<title xml:lang="Bo-Ltn">rgyud ’bum</title>) and the Compendium of Dhāraṇīs
@@ -254,7 +258,7 @@
                             <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT AND REMOVE THE <p> ELEMENT-->
                             <p key="toh741">Note that there is a discrepancy among various databases for cataloging the Toh 1006 version
                                 of this text within vol. 101 or 102 of the Degé Kangyur. See Toh 1006, <ptr target="toh1006.html#UT22084-094-018-137"/>, for details.</p>
-                        </note> in the Degé Kangyur in
+                        </note> in the Degé Kangyur, in
                         consultation with the editions of two Sanskrit witnesses, the Dunhuang
                         version, the Stok Palace Kangyur, and <title xml:lang="en">The Sūtra of
                             Mahāśrī.</title>
@@ -271,8 +275,6 @@
                     <p tid="19">
                         <ref cRef="F.235.a" type="folio" key="toh741" xml:id="UT22084-094-018-133"/> <ref cRef="F.172.a" type="folio" key="toh1006" xml:id="UT22084-094-018-134"/> Homage to the Three Jewels.</p>
                     <lb/>
-                    <p tid="20">Homage to the Three Jewels.</p>
-                    <lb/>
                     <p tid="21">Homage to the noble Avalokiteśvara. </p>
                     <lb/>
                     <p tid="22">Homage to Vajrapāṇi. </p>
@@ -288,11 +290,11 @@
                     <p tid="25">Thus did I hear at one time. The Blessed One was residing in the
                         realm of Sukhāvatī. Then the bodhisattva mahāsattva, the noble
                         Avalokiteśvara, set out to where the Blessed One was residing. Having
-                        arrived, he bowed his head to the feet of the Blessed One, circumambulated
-                        the Blessed One thrice, and sat down to one side. Then the bodhisattva
-                        mahāsattva, the great goddess Śrī also set out to where the Blessed One was
-                        residing. Having arrived, she bowed her head to the feet of the Blessed One
-                        and sat down to one side. </p>
+                        arrived, he bowed his head at the feet of the Blessed One, circumambulated
+                        the Blessed One thrice, and sat down on one side. Then the bodhisattva
+                        mahāsattva, the great goddess Śrī, also set out to where the Blessed One was
+                        residing. Having arrived, she bowed her head at the feet of the Blessed One
+                        and sat down on one side. </p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-75"/>
                     <p tid="26">Then the Blessed One looked at Mahāśrī and said this to the noble
                         Avalokiteśvara: <ref cRef="F.235.b" type="folio" key="toh741" xml:id="UT22084-094-018-135"/> “Avalokiteśvara, whosoever, including monks and
@@ -314,7 +316,7 @@
                         said, “May it be so!” </p>
                     <milestone unit="chunk" xml:id="UT22084-094-018-79"/>
                     <p tid="28">“These are the twelve names of the great goddess Śrī: <ref cRef="F.172.b" type="folio" key="toh1006" xml:id="UT22084-094-018-136"/>
-                        “Namely—Welfare, Splendor, She Who Is Wearing a Garland of Lotuses, Mistress
+                        “It is thus—Welfare, Splendor, She Who Is Wearing a Garland of Lotuses, Mistress
                         of Wealth, White One,<note place="end" xml:id="UT22084-094-018-80"> Gaurī is
                             given in the Sanskrit, but the Tibetan here has “Clad in White”
                                 (<foreign xml:lang="Bo-Ltn" type="quote">dkar sham
@@ -322,16 +324,16 @@
                         Radiance, She Who Accomplishes, Bestower of Nourishment, She of Jewel-Like
                             Gleam,<note place="end" xml:id="UT22084-094-018-81"> The Tibetan of
                                 <title xml:lang="en">The Sūtra of Mahāśrī</title> has <foreign xml:lang="Bo-Ltn" type="quote">rin po che rab tu sbyin ma</foreign>,
-                            suggests an underlying reading *Ratnapradā, </note> Great Splendor.
+                            suggesting an underlying reading of *Ratnapradā.</note> Great Splendor.
                         Homage to all buddhas! Homage to Avalokiteśvara! Homage to the great goddess
-                        Śrī! Namely—<mantra xml:lang="Sa-Ltn">jini ghriṇi</mantra>, O Accomplisher
+                        Śrī! It is thus—<mantra xml:lang="Sa-Ltn">jini ghriṇi</mantra>, O Accomplisher
                         of All Goals, <mantra xml:lang="Sa-Ltn">simi simi nimi nimi</mantra>,<note place="end" xml:id="UT22084-094-018-82"> The Sanskrit differs slightly:
                             “Here the mantra-words are <foreign xml:lang="Sa-Ltn" type="quote">jini
                                 jini glini glini kāya­viśodhani vāgviśodhani
                                 manaḥsaṃ­śodhani</foreign> (‘Purifier of Body, Speech, and Mind’),
                                 <foreign xml:lang="Sa-Ltn" type="quote">sisi sisi, nimi
                                 nimi</foreign>.” The Sanskrit does not transmit the three obeisance
-                            formulas. </note> remove my destitution completely,<note place="end" xml:id="UT22084-094-018-83"> Here we adopted the Dunhuang reading
+                            formulas. </note> remove my destitution completely,<note place="end" xml:id="UT22084-094-018-83"> Here we have adopted the Dunhuang reading
                                 (<foreign xml:lang="Bo-Ltn" type="quote">myi shis pa</foreign>),
                             mirroring the Sanskrit <foreign xml:lang="Sa-Ltn" type="quote">alakṣmīṃ</foreign> more faithfully, instead of Degé and Stok,
                             which, due to a scribal error, have “ignorance” (<foreign xml:lang="Bo-Ltn" type="quote">mi shes pa</foreign>). </note>
@@ -372,15 +374,13 @@
                             mtshan bcu gnyis pa</title>. Toh 1006, Degé Kangyur vol. 101 (gzungs ’dus, waM), folios 172.a–172.b.</bibl>
                     <bibl xml:id="UT22084-094-018-90">
                         <title xml:lang="Bo-Ltn">dpal gyi lha mo’i
-                            mtshan bcu gnyis pa</title>. Skorupski 694, Stok Palace Kangyur vol. 108
+                            mtshan bcu gnyis pa</title>. Stok Palace Kangyur vol. 108
                         (rgyud, tsa), folios 87.a–88.a.</bibl>
                     <bibl xml:id="UT22084-094-018-91">
                         <title xml:lang="Bo-Ltn">dpal chen mo’i
                             mdo</title> (<title xml:lang="Sa-Ltn">Mahāśrīsūtra</title>). Toh 740,
                         Degé Kangyur vol. 94 (rgyud ’bum, tsha), folios 234.b–235.a; Toh 1005, Degé
-                        Kangyur vol. 101 (gzungs ’dus, waM), folios 171.a–172.b. English translation <title xml:lang="en">
-                            <ref target="https://84000.co/translation/toh740.html">The Sūtra of Mahāśrī</ref>
-                        </title>, 2024.</bibl>
+                        Kangyur vol. 101 (gzungs ’dus, waM), folios 171.a–172.b. English translation <title xml:lang="en">The Sūtra of Mahāśrī</title> 2024.</bibl>
                     <bibl xml:id="UT22084-094-018-92">Denkarma (<title xml:lang="Bo-Ltn">pho brang
                             stod thang ldan dkar gyi chos kyi ’gyur ro cog gi dkar chag</title>).
                         Toh 4364, Degé Tengyur vol. 206 (sna tshogs, jo), folios 294.b–310.a.</bibl>
@@ -753,7 +753,10 @@
                             <term xml:lang="Bo-Ltn" n="1">bde ba can </term>
                             <term xml:lang="bo" n="1">བདེ་བ་ཅན།</term>
                             <term xml:lang="Sa-Ltn" type="attestedOther">sukhāvatī</term>
-                        </gloss>
+                        <note type="definition">
+                            <p>Sukhāvatī (Blissful) is the buddhafield to the west inhabited by the buddha Amitābha, who is also known as Amitāyus. It is classically described in The Display of the Pure Land of Sukhāvatī (<title xml:lang="Sa-Ltn">Sukhāvatīvyūha</title>).</p>
+                        </note>
+                    </gloss>
                     </item>
                 </list>
             </div>
