--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-023-22">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-023"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-24T12:55:21.426Z" type="text-version" status="0.0.11" xml:id="UT22084-088-023-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:07:45.353Z" type="translation-status" status="2.e" xml:id="UT22084-088-023-26">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:07:45.353Z" type="text-version" status="0.0.12" xml:id="UT22084-088-023-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
