--- a/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-096-013-21">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-096-013"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +89,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-26T08:42:05.561Z" type="text-version" status="0.0.10" xml:id="UT22084-096-013-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:12:55.923Z" type="translation-status" status="2.e" xml:id="UT22084-096-013-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:12:55.923Z" type="text-version" status="0.0.11" xml:id="UT22084-096-013-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
