--- a/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
@@ -20,11 +20,11 @@
                 <editor role="projectEditor" xml:id="UT22084-096-018-21">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-096-018"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-26T08:43:15.368Z" type="text-version" status="0.0.10" xml:id="UT22084-096-018-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:14:08.132Z" type="translation-status" status="2.e" xml:id="UT22084-096-018-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:14:08.132Z" type="text-version" status="0.0.11" xml:id="UT22084-096-018-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
