--- a/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-035-020-15">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-035-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -69,6 +69,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-24T13:39:21.345Z" type="text-version" status="0.0.10" xml:id="UT22084-035-020-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:24:22.51Z" type="translation-status" status="2.e" xml:id="UT22084-035-020-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T10:24:22.51Z" type="text-version" status="0.0.11" xml:id="UT22084-035-020-20">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
