--- a/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" xml:id="UT22084-085-003-20">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-085-003"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +90,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-07T09:40:26.9Z" type="text-version" status="0.0.13" xml:id="UT22084-085-003-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T11:08:59.438Z" type="translation-status" status="2.e" xml:id="UT22084-085-003-24">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T11:08:59.438Z" type="text-version" status="0.0.14" xml:id="UT22084-085-003-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
