--- a/translations/kangyur/placeholders/039-001_toh45-the_chapter_explaining_the_three_vows.xml
+++ b/translations/kangyur/placeholders/039-001_toh45-the_chapter_explaining_the_three_vows.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-039-001-3">Zhu Yuanhua, Zhang Chunjing</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-039-001"/>
                 <date/>
             </publicationStmt>
@@ -47,6 +47,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-03-26T01:53:07.02Z" type="text-version" status="0.0.6" xml:id="UT22084-039-001-7">
                     <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T11:36:27.475Z" type="translation-status" status="2.h" xml:id="UT22084-039-001-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-26T11:36:27.475Z" type="text-version" status="0.0.7" xml:id="UT22084-039-001-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
