--- a/translations/kangyur/translations/094-017_toh740,1005-the_sutra_of_mahasri.xml
+++ b/translations/kangyur/translations/094-017_toh740,1005-the_sutra_of_mahasri.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-094-017-126">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -158,6 +158,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-11-21T12:44:18.722Z" type="text-version" status="1.0.0" xml:id="UT22084-094-017-129">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-11-27T14:47:49.075Z" type="text-version" status="1.0.1" xml:id="UT22084-094-017-130">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -393,7 +396,7 @@
                         Studies, 1985.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-094-017-glossary">
+            <div type="glossary" xml:id="UT22084-094-017-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-094-017-83">
