--- a/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-020-99">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -133,6 +133,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-11-21T12:37:29.878Z" type="text-version" status="1.0.0" xml:id="UT22084-090-020-102">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-11-27T15:15:13.698Z" type="text-version" status="1.0.1" xml:id="UT22084-090-020-103">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -409,7 +412,7 @@
                     </bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-090-020-glossary">
+            <div type="glossary" xml:id="UT22084-090-020-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-090-020-78">
