--- a/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
+++ b/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-090-029-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-029-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-029-21">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-029-30">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-029"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-04T09:01:20.476Z" type="text-version" status="0.0.10" xml:id="UT22084-090-029-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:01:54.152Z" type="text-version" status="0.0.11" xml:id="UT22084-090-029-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:39:37.996Z" type="translation-status" status="2.a" xml:id="UT22084-090-029-32">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:39:37.996Z" type="text-version" status="0.0.12" xml:id="UT22084-090-029-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
