--- a/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
+++ b/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
@@ -8,17 +8,19 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rma bya chen mo'i snying po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rma bya chen mo'i snying po/</title>
-                <author role="translatorMain" xml:id="UT22084-090-031-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-031-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-090-031-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-031-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-031-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-090-031-21">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-031-22">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-031"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +80,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-04T09:04:19.678Z" type="text-version" status="0.0.8" xml:id="UT22084-090-031-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:05:01.72Z" type="text-version" status="0.0.9" xml:id="UT22084-090-031-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:41:56.172Z" type="translation-status" status="2.a" xml:id="UT22084-090-031-24">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:41:56.172Z" type="text-version" status="0.0.10" xml:id="UT22084-090-031-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
