--- a/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
+++ b/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
@@ -15,13 +15,14 @@
                 <author role="translatorEng" xml:id="UT22084-090-032-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-032-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-032-21">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-032-30">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-032"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-04T09:05:56.735Z" type="text-version" status="0.0.10" xml:id="UT22084-090-032-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:06:32.848Z" type="text-version" status="0.0.11" xml:id="UT22084-090-032-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:43:00.491Z" type="translation-status" status="2.a" xml:id="UT22084-090-032-32">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:43:00.491Z" type="text-version" status="0.0.12" xml:id="UT22084-090-032-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
