--- a/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
+++ b/translations/kangyur/placeholders/090-033_toh589,945-the_incantation_of_the_descent_to_lanka_sutra.xml
@@ -16,13 +16,14 @@
                 <author role="translatorEng" xml:id="UT22084-090-033-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-033-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-033-19">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-033-28">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-033"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-04T09:07:19.427Z" type="text-version" status="0.0.9" xml:id="UT22084-090-033-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-04T09:07:51.387Z" type="text-version" status="0.0.10" xml:id="UT22084-090-033-29">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:44:24.064Z" type="translation-status" status="2.a" xml:id="UT22084-090-033-30">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T11:44:24.064Z" type="text-version" status="0.0.11" xml:id="UT22084-090-033-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
