--- a/translations/kangyur/placeholders/101-152_toh1096,4378-the_prayer_of_maitreya.xml
+++ b/translations/kangyur/placeholders/101-152_toh1096,4378-the_prayer_of_maitreya.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-101-152-2">84000 editors</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-101-152"/>
             </publicationStmt>
             <sourceDesc>
@@ -74,6 +74,12 @@
                 </change>
                 <change who="#celso" when="2024-11-13T13:09:06.363Z" type="text-version" status="0.0.7" xml:id="UT22084-101-152-13">
                     <desc>merged with Toh 4378</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:17:11.534Z" type="translation-status" status="2.h" xml:id="UT22084-101-152-14">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:17:11.534Z" type="text-version" status="0.0.8" xml:id="UT22084-101-152-15">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
