--- a/translations/kangyur/placeholders/096-068_toh819,1100-the_verses_of_auspiciousness_for_the_questions_of_the_god.xml
+++ b/translations/kangyur/placeholders/096-068_toh819,1100-the_verses_of_auspiciousness_for_the_questions_of_the_god.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-068-9">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-068"/>
             </publicationStmt>
             <sourceDesc>
@@ -73,6 +73,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T07:01:43.23Z" type="text-version" status="0.0.3" xml:id="UT22084-096-068-11">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:26:49.578Z" type="translation-status" status="2.h" xml:id="UT22084-096-068-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:26:49.578Z" type="text-version" status="0.0.4" xml:id="UT22084-096-068-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
