--- a/translations/kangyur/placeholders/096-073_toh824-verses_of_auspiciousness_for_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-073_toh824-verses_of_auspiciousness_for_the_three_jewels.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-073-8">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-073"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +59,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:37:18.85Z" type="text-version" status="0.0.2" xml:id="UT22084-096-073-9">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:28:57.282Z" type="translation-status" status="2.h" xml:id="UT22084-096-073-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T12:28:57.282Z" type="text-version" status="0.0.3" xml:id="UT22084-096-073-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
