--- a/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
+++ b/translations/kangyur/translations/089-013_toh556-the_sutra_of_the_sublime_golden_light_2.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-089-013-6">E E, May-E, Minda, Chung-Da Ho</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -162,6 +162,9 @@
                 </change>
                 <change who="#sameer" when="2024-10-25T15:30:09.691Z" type="text-version" status="1.0.4" xml:id="UT22084-089-013-3282">
                     <desc>Included in App v 3.19</desc>
+                </change>
+                <change who="#celso" when="2024-11-28T13:46:07.176Z" type="text-version" status="1.0.5" xml:id="UT22084-089-013-3283">
+                    <desc>minor edit to glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -11569,7 +11572,6 @@
                                 <p>
                                     <foreign xml:lang="la">Cheilocostus speciosus</foreign>. This rhizome is used in Āyurvedic
                                     medicine to treat fever, rash, asthma, bronchitis, and intestinal worms.</p>
-                                <p/>
                             </note>
                         </gloss>
                     </item>
@@ -12437,7 +12439,6 @@
                                     the version in the manuscript from which the Tibetan was transliterated.</p>
                                 <p>(Toh 555: <foreign xml:lang="Bo-Ltn">thang chu</foreign>.)</p>
                             </note>
-                            <term type="translationAlternative"/>
                         </gloss>
                     </item>
                     <item>
@@ -17278,7 +17279,7 @@
                             <term type="translationMain">Mahācakravāḍa</term>
                             <term xml:lang="Bo-Ltn" n="1">khor yug chen po </term>
                             <term xml:lang="bo" n="1">ཁོར་ཡུག་ཆེན་པོ།</term>
-                            <term>mahācakravāḍa</term>
+                            <term xml:lang="Sa-Ltn">mahācakravāḍa</term>
                             <note type="definition">
                                 <p>This appears to refer to the great circles of mountains that enclose a thousand worlds, each with its own
                                     Cakravāḍa.</p>
