--- a/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -14,15 +14,15 @@
                 <author role="translatorEng" xml:id="UT22084-033-001-2">Greg Seton</author>
                 <consultant role="projectManager" xml:id="UT22084-033-001-3">John Canti</consultant>
                 <editor role="projectEditor" xml:id="UT22084-033-001-10">John Canti</editor>
+                <editor role="copyEditor" xml:id="UT22084-033-001-24">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-033-001-4">般若八千頌譯經護持小組</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
-
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-033-001"/>
                 <date/>
             </publicationStmt>
@@ -72,20 +72,29 @@
                 <change who="#line-tofte" when="2024-08-12T07:15:19.405Z" type="text-version" status="0.0.9" xml:id="UT22084-033-001-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-08-12T07:17:35.323Z" type="text-version" status="0.0.10" xml:id="UT22084-033-001-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T13:50:28.17Z" type="translation-status" status="2.d" xml:id="UT22084-033-001-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T13:50:28.17Z" type="text-version" status="0.0.11" xml:id="UT22084-033-001-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-033-001-summary">
                 <p tid="2">
                     This sūtra takes the form of a series of dialogues between the Buddha Śākyamuni, Subhūti, Śāriputra, and others such as Indra, the king of gods, and a Goddess of the Ganges, and as well as setting out the teachings on emptiness as such it describes the path and practices that a bodhisattva should take to integrate this understanding of phenomena and finally realize it. A special feature of this particular sūtra are the inspirational narratives of Sadāprarudita and his quest for the teachings on the Perfection of Wisdom from the Bodhisattva Dharmodgata, contained in the final three chapters.
                 </p>
             </div>
-            <div type="summary" xml:lang="zh">
+            <div type="summary" xml:lang="zh" xml:id="UT22084-033-001-summary-zh">
                 <p tid="3">本經透過釋迦牟尼佛與須菩提、舍利弗、帝釋天、恒河女神等弟子之間的對話，描述了菩薩道之修學法門。文末記載著常啼菩薩師從法上菩薩學習般若智慧的勵志故事。</p>
             </div>
-            <div type="acknowledgment">
+            <div type="acknowledgment" xml:id="UT22084-033-001-acknowledgment">
                 <p tid="1">Sponsored by 般若八千頌譯經護持小組</p>
             </div>
         </front>
