--- a/translations/kangyur/placeholders/081-016_toh447-the_tantra_compendium_of_vajra_gnosis.xml
+++ b/translations/kangyur/placeholders/081-016_toh447-the_tantra_compendium_of_vajra_gnosis.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-081-016-5">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-081-016"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:05:20.361Z" type="text-version" status="0.0.1" xml:id="UT22084-081-016-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T14:47:24.526Z" type="translation-status" status="2.h" xml:id="UT22084-081-016-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T14:47:24.526Z" type="text-version" status="0.0.2" xml:id="UT22084-081-016-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
