--- a/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
+++ b/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -163,6 +163,9 @@
                 <change who="#sameer" when="2024-10-25T15:31:15.372Z" type="text-version" status="1.0.5" xml:id="UT22084-090-001-2043">
                     <desc>Included in App v 3.19</desc>
                 </change>
+                <change who="#celso" when="2024-11-28T15:19:40.293Z" type="text-version" status="1.0.6" xml:id="UT22084-090-001-2045">
+                    <desc>corrected note xml:id</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -217,7 +220,7 @@
                         state and of the world.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-51"/>
                     <p tid="11">The work translated here is the twenty-one-chapter version (hereafter referenced as Toh 557) of <title xml:lang="en">The Sūtra of the Sublime Golden Light</title>. There is also the twenty-nine-chapter version (hereafter referenced as Toh
-                            556)<note place="end" xml:id="UT22084-089-012-4177">
+                            556)<note place="end" xml:id="UT22084-090-001-2044">
                             <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh556.html">The Sūtra of the Sublime Golden Light (2)</ref>
                             </title>
