--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-096-010-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T12:20:50.231Z" type="text-version" status="0.0.10" xml:id="UT22084-096-010-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:23:08.724Z" type="translation-status" status="2.c" xml:id="UT22084-096-010-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:23:08.724Z" type="text-version" status="0.0.11" xml:id="UT22084-096-010-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
