--- a/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
@@ -13,11 +13,11 @@
                 <editor role="copyEditor" xml:id="UT22084-096-074-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-096-074"/>
             </publicationStmt>
             <sourceDesc>
@@ -91,6 +91,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T12:51:10.436Z" type="text-version" status="0.0.8" xml:id="UT22084-096-074-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:38:08.883Z" type="translation-status" status="2.c" xml:id="UT22084-096-074-28">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:38:08.883Z" type="text-version" status="0.0.9" xml:id="UT22084-096-074-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
