--- a/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
@@ -12,14 +12,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">[in Toh:] śrīvajrapāṇiguhyābhideśatantranāma</title>
                 <author role="translatorMain" xml:id="UT22084-083-011-5">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-011-6">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-083-011-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-083-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -60,6 +61,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T11:27:00.269Z" type="text-version" status="0.0.6" xml:id="UT22084-083-011-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:27:56.077Z" type="text-version" status="0.0.7" xml:id="UT22084-083-011-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:53:13.065Z" type="translation-status" status="2.f" xml:id="UT22084-083-011-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:53:13.065Z" type="text-version" status="0.0.8" xml:id="UT22084-083-011-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
