--- a/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
+++ b/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
@@ -15,13 +15,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">klu'i rgyal po gzi can gyis zhus pa'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-056-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-056-5">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-091-056-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-056"/>
             </publicationStmt>
             <sourceDesc>
@@ -72,6 +73,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T11:31:12.261Z" type="text-version" status="0.0.7" xml:id="UT22084-091-056-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:31:48.774Z" type="text-version" status="0.0.8" xml:id="UT22084-091-056-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:59:58.837Z" type="translation-status" status="2.f" xml:id="UT22084-091-056-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:59:58.837Z" type="text-version" status="0.0.9" xml:id="UT22084-091-056-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
