--- a/translations/kangyur/translations/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/translations/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-013-206">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -163,6 +163,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-11-15T18:19:55.097Z" type="text-version" status="1.0.1" xml:id="UT22084-066-013-214">
                     <desc>updated typo.</desc>
+                </change>
+                <change who="#andre" when="2024-11-29T12:13:27.494Z" type="text-version" status="1.0.2" xml:id="UT22084-066-013-215">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -752,7 +755,7 @@
                     </div>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-066-013-glossary">
+            <div type="glossary" xml:id="UT22084-066-013-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-066-013-149">
@@ -1089,13 +1092,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-066-013-178">
-                            <term type="translationMain">the faithful</term>
-                            <term status="verified" xml:lang="Bo-Ltn" n="1">dad pa </term>
-                            <term xml:lang="bo" n="1">དད་པ།</term>
+                        <gloss xml:id="UT22084-066-013-178" type="person" mode="match">
+                            <term type="translationMain">faithful</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dad pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">དད་པ།</term>
                             <note type="definition">
-                                <p>The laity who make offerings to the ordained
-                                    saṅgha. </p>
+                                <p>The laity who make offerings to the ordained saṅgha. </p>
                             </note>
                         </gloss>
                     </item>
@@ -1133,9 +1135,11 @@
                     <item>
                         <gloss xml:id="UT22084-066-013-194" type="term" mode="match">
                             <term type="translationMain">to go forth</term>
+                            <term type="translationAlternative">go forth</term>
+                            <term type="translationAlternative">gone forth</term>
+                            <term type="translationAlternative">going forth</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pravrajati</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rab tu ’byung
-                                ba</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rab tu ’byung ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རབ་ཏུ་འབྱུང་བ།</term>
                         </gloss>
                     </item>
