--- a/translations/kangyur/translations/101-079_toh1024-the_dharani_that_pacifies_all_suffering.xml
+++ b/translations/kangyur/translations/101-079_toh1024-the_dharani_that_pacifies_all_suffering.xml
@@ -19,7 +19,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-079-97">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -148,6 +148,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-11-01T21:56:44.835Z" type="text-version" status="1.0.0" xml:id="UT22084-101-079-693">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-11-29T12:25:39.692Z" type="text-version" status="1.0.1" xml:id="UT22084-101-079-694">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -380,7 +383,7 @@
                         Hungarian Academy of Sciences, 2010.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-101-079-glossary">
+            <div type="glossary" xml:id="UT22084-101-079-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-101-079-60">
