--- a/translations/kangyur/placeholders/003-003_toh1-8-chapter_8_on_turning_cloth_into_robes.xml
+++ b/translations/kangyur/placeholders/003-003_toh1-8-chapter_8_on_turning_cloth_into_robes.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-003-003-11">Charles DiSimone</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-003-003"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-02T10:04:05.272Z" type="text-version" status="0.0.7" xml:id="UT22084-003-003-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-29T12:35:03.963Z" type="translation-status" status="2.g" xml:id="UT22084-003-003-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-29T12:35:03.963Z" type="text-version" status="0.0.8" xml:id="UT22084-003-003-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
