--- a/translations/kangyur/translations/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/translations/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -26,7 +26,7 @@
                 <editor role="projectEditor" xml:id="UT22084-072-019-206">Wiesiek Mical</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -166,6 +166,9 @@
                 </change>
                 <change who="#laura" when="2024-11-19T18:35:01.694Z" type="text-version" status="1.0.2" xml:id="UT22084-072-019-211">
                     <desc>More bibliography corrections</desc>
+                </change>
+                <change who="#andre" when="2024-11-29T12:54:56.937Z" type="text-version" status="1.0.3" xml:id="UT22084-072-019-212">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -443,7 +446,7 @@
                         Facsimile edition. 10 vols. Śata-piṭaka Series 10. New Delhi: International Academy of Indian Culture, 1959–74.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-072-019-glossary">
+            <div type="glossary" xml:id="UT22084-072-019-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-072-019-132">
@@ -548,13 +551,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-072-019-141">
+                        <gloss xml:id="UT22084-072-019-141" type="term" mode="match">
                             <term type="translationMain">gooseberry</term>
-                            <term status="verified" xml:lang="Bo-Ltn" n="1">skyu ru ra </term>
-                            <term xml:lang="bo" n="1">སྐྱུ་རུ་ར།</term>
-                            <term status="verified" xml:lang="Sa-Ltn" type="attestedSource">āmalaka</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">āmalaka</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skyu ru ra</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱུ་རུ་ར།</term>
                             <note type="definition">
-                                <p>The Indian gooseberry, or <foreign xml:lang="la">Emblic myrobalan</foreign>. </p>
+                                <p>The Indian gooseberry or emblic myrobalan <foreign xml:lang="la">Phyllanthus emblica</foreign>. </p>
                             </note>
                         </gloss>
                     </item>
